src/test/ui/macros/trace_faulty_macros.stderr
error: no rules expected the token `bcd`
  --> $DIR/trace_faulty_macros.rs:7:26
   |
LL | macro_rules! my_faulty_macro {
   | ---------------------------- when calling this macro
LL |     () => {
LL |         my_faulty_macro!(bcd);
   |                          ^^^ no rules expected this token in macro call
...
LL |     my_faulty_macro!();
   |     ------------------- in this macro invocation

note: trace_macro
  --> $DIR/trace_faulty_macros.rs:33:5
   |
LL |     my_faulty_macro!();
   |     ^^^^^^^^^^^^^^^^^^^
   |
   = note: expanding `my_faulty_macro! {  }`
   = note: to `my_faulty_macro ! ( bcd ) ;`
   = note: expanding `my_faulty_macro! { bcd }`

error: recursion limit reached while expanding the macro `my_recursive_macro`
  --> $DIR/trace_faulty_macros.rs:22:9
   |
LL |         my_recursive_macro!();
   |         ^^^^^^^^^^^^^^^^^^^^^^
...
LL |     my_recursive_macro!();
   |     ---------------------- in this macro invocation
   |
   = help: consider adding a `#![recursion_limit="8"]` attribute to your crate

note: trace_macro
  --> $DIR/trace_faulty_macros.rs:34:5
   |
LL |     my_recursive_macro!();
   |     ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: expanding `my_recursive_macro! {  }`
   = note: to `my_recursive_macro ! (  ) ;`
   = note: expanding `my_recursive_macro! {  }`
   = note: to `my_recursive_macro ! (  ) ;`
   = note: expanding `my_recursive_macro! {  }`
   = note: to `my_recursive_macro ! (  ) ;`
   = note: expanding `my_recursive_macro! {  }`
   = note: to `my_recursive_macro ! (  ) ;`
   = note: expanding `my_recursive_macro! {  }`
   = note: to `my_recursive_macro ! (  ) ;`

error: aborting due to 2 previous errors

